--- a/index.html
+++ b/index.html
@@ -1096,6 +1096,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           Shop: {},
           Temple: {},
           Location: {},
+          OldMap: {},
+          SagesWill: {},
+          YigaSchema: {},
+          SchemaStone: {},
           'Enemy::Talus': {},
           'Enemy::Gleeok': {},
           'Enemy::Hinox': {},
