--- a/index.html
+++ b/index.html
@@ -1096,6 +1096,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           Shop: {},
           Temple: {},
           Location: {},
+          Place:{},
           OldMap: {},
           SagesWill: {},
           YigaSchema: {},
