Add TechLab to counters

--- a/index.html
+++ b/index.html
@@ -1115,6 +1115,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           SagesWill: {},
           YigaSchema: {},
           SchemaStone: {},
+          TechLab: {},
           'Enemy::Talus': {},
           'Enemy::Gleeok': {},
           'Enemy::Hinox': {},
